# usb-uvc-test

./: settings.gradle  uvc_debug_vars.txt
gradle/wrapper/: gradle-wrapper.properties
usbuvc/: build.gradle
usbuvc/src/androidTest/java/org/sofwerx/usbuvc/: ExampleInstrumentedTest.java
usbuvc/src/main/: AndroidManifest.xml
usbuvc/src/main/cpp/: CMakeLists.txt  uvccam.c  uvccam.h
usbuvc/src/main/cpp/examples/: MainActivity.java
usbuvc/src/main/cpp/include/: libusb  libuvc
usbuvc/src/main/cpp/lib/arm64-v8a/: dpfp  dpfp_threaded  fxload  hotplugtest  listdevs  sam3u_benchmark  stress  xusb
usbuvc/src/main/cpp/lib/armeabi-v7a/: dpfp  dpfp_threaded  fxload  hotplugtest  listdevs  sam3u_benchmark  stress  xusb
usbuvc/src/main/cpp/lib/x86/: dpfp  dpfp_threaded  fxload  hotplugtest  listdevs  sam3u_benchmark  stress  xusb
usbuvc/src/main/cpp/lib/x86_64/: dpfp  dpfp_threaded  fxload  hotplugtest  listdevs  sam3u_benchmark  stress  xusb
usbuvc/src/main/java/org/sofwerx/usbuvc/: MainActivity.java
usbuvc/src/main/res/layout/: activity_main.xml
usbuvc/src/main/res/menu/: usb_nav.xml
usbuvc/src/main/res/values/: colors.xml  dimens.xml  strings.xml
usbuvc/src/test/java/org/sofwerx/usbuvc/: ExampleUnitTest.java
